# Enterprise-RAG

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/config/: application.yaml
agent/src/enterprise_agent/: __init__.py  backend_client.py  citations.py  config.py  dependencies.py  errors.py  graph.py  lifespan.py  main.py  model_provider.py  models.py  observability.py  persistence.py  prompts.py
agent/src/enterprise_agent/api/: __init__.py  router.py
agent/src/enterprise_agent/api/routers/: health.py  runs.py
agent/tests/: conftest.py  test_config.py  test_graph.py  test_main.py  test_model_provider.py  test_persistence.py
api/: .dockerignore  Dockerfile  go.mod  go.sum  rag.go
api/api/: auth.api  chat.api  common.api  document.api  rag.api  retrieval.api  settings.api
api/etc/: application.yaml  infrastructure.yaml  rag-api.yaml
backend/: go.mod  go.sum  rag.go
backend/api/: admin.api  chat.api  common.api  document.api  rag.api  retrieval.api  subject.api
backend/etc/: application.yaml  evaluation-cases.yaml  infrastructure.yaml  rag-api.yaml  rag.yaml
backend/migrations/: 000001_init.down.sql  000001_init.up.sql
deploy/monitoring/: alerts.yaml  jaeger.yaml  otel-collector.yaml  prometheus.yaml
docs/: agent-runtime.md  development.md  quality-evaluation.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  RootApp.tsx  index.css  (+1 more)
web/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
(+421 files in other folders)
