[project]
name = "enterprise-rag-agent"
version = "5.0.0"
description = "LangGraph orchestration service for Enterprise RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135,<1",
    "httpx>=0.28,<1",
    "langchain-openai>=1.1,<2",
    "langgraph>=1.1,<2",
    "langgraph-checkpoint-postgres>=3,<4",
    "opentelemetry-api>=1.40,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40,<2",
    "opentelemetry-instrumentation-fastapi>=0.61b0,<1",
    "opentelemetry-instrumentation-httpx>=0.61b0,<1",
    "opentelemetry-sdk>=1.40,<2",
    "prometheus-client>=0.24,<1",
    "psycopg[binary]>=3.3,<4",
    "pydantic>=2.12,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19,<2",
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "respx>=0.22,<1",
    "ruff>=0.15,<1",
    "types-PyYAML>=6.0,<7",
]

[build-system]
requires = ["hatchling>=1.29,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_agent"]

[tool.fastapi]
entrypoint = "enterprise_agent.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["enterprise_agent"]
